//CODEGEN BELOW - DO NOT TOUCH ME
syntax = "proto3";
package vec_test;

message VecDWrapper {
  bytes inner1 = 1;
  uint32 inner2 = 2;
  uint64 inner3 = 3;
}

message VecWrapper {
  bytes inner1 = 1;
  repeated uint32 inner2 = 2;
  repeated uint64 inner3 = 3;
}

